--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-
+  background: #1e1f24;
   color: #333;
 
   text-align: left;
@@ -11,7 +11,7 @@ body {
 
 }
 
-#cabecera {
+#cabecera  {
 
   background: #33a;
   box-shadow: 0px 2px 20px 0 rgba(0,0,0,0.5);
@@ -19,6 +19,12 @@ body {
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
+}
+
+#cabecera #logo {
+
+  width: 20px;
+  vertical-align: middle;
 }
 
 #cabecera #tagline 
@@ -42,4 +48,10 @@ body {
 #container h1 {
 
   font-size: 20px;
+}
+
+#post {
+
+  background: white;
+  padding: 1em;
 }
